@@ -23,12 +23,14 @@ class BudgetingWorkflowIT extends AbstractOracleIntegrationTest {
     private TestRestTemplate restTemplate;
 
     @Test
-    @DisplayName("given valid budget request, when creating and fetching budgets, then returns expected results")
+    @DisplayName("given valid budget request with owners, when creating and fetching budgets, then returns expected results with owners")
     @Sql(scripts = "/sql/cleanup-all.sql", executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
+    @Sql(scripts = "/sql/insert-employee.sql", executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
     @Sql(scripts = "/sql/insert-ou.sql", executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
-    void givenValidBudgetRequest_whenCreatingAndFetchingBudgets_thenReturnsExpectedResults() {
+    void givenValidBudgetRequestWithOwners_whenCreatingAndFetchingBudgets_thenReturnsExpectedResultsWithOwners() {
         // given
-        final var existingOuId = 2L; // Assigned by insert-ou.sql
+        final var existingOuId = 2L;
+        final var existingOwnerId = 10L;
         final var randomFiscalYear = BudgetingTestFactory.randomFiscalYearValue();
         final var randomAssignedBudget = BudgetingTestFactory.randomBigDecimalAmount();
 
@@ -36,6 +38,7 @@ class BudgetingWorkflowIT extends AbstractOracleIntegrationTest {
         request.setOrganizationalUnitId(existingOuId);
         request.setFiscalYear(randomFiscalYear);
         request.setAssignedBudget(randomAssignedBudget);
+        request.setOwners(java.util.List.of(existingOwnerId));
         request.setIncludeAllChildren(false);
 
         // when
@@ -47,15 +50,16 @@ class BudgetingWorkflowIT extends AbstractOracleIntegrationTest {
         final var createBody = createResponse.getBody();
         assertThat(createBody).isNotNull();
         assertThat(createBody.getItems()).hasSize(1);
-        assertThat(createBody.getItems().get(0).getAssignedBudget()).isEqualByComparingTo(randomAssignedBudget);
+        assertThat(createBody.getItems().getFirst().getAssignedBudget()).isEqualByComparingTo(randomAssignedBudget);
+        assertThat(createBody.getItems().getFirst().getOwners()).containsExactly(existingOwnerId);
 
-        final var budgetId = createBody.getItems().get(0).getId();
+        final var budgetId = createBody.getItems().getFirst().getId();
 
-        // when (fetch)
+        // when
         final var fetchResponse = restTemplate.getForEntity(
                 BudgetingApiEndpoints.BUDGETS_OU_BY_ID.formatted(existingOuId), OuBudgetResponse[].class);
 
-        // then (fetch)
+        // then
         assertThat(fetchResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
         final var fetchBody = fetchResponse.getBody();
         assertThat(fetchBody).isNotNull().hasSize(1);
@@ -63,5 +67,7 @@ class BudgetingWorkflowIT extends AbstractOracleIntegrationTest {
         assertThat(fetchBody[0].getAssignedBudget()).isEqualByComparingTo(randomAssignedBudget);
         assertThat(fetchBody[0].getAvailableBudget()).isEqualByComparingTo(randomAssignedBudget);
         assertThat(fetchBody[0].getReservedBudget()).isEqualByComparingTo(BigDecimal.ZERO);
+        assertThat(fetchBody[0].getOwners()).containsExactly(existingOwnerId);
     }
 }
+
